<resources>
    <string name="app_name">Setup Wizard</string>
    <string name="welcome">Welcome to \n<i>Portal Rom OS</i></string>
    <string name="start">Start</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="activity_label_empty" />
    <string name="languageLabel">Language</string>
    <string name="localeHint">Choose your language:</string>
    <string name="networkLabel">Internet</string>
    <string name="wifiLabel">Wi-Fi</string>
    <string name="searchLabelOff">Available networks</string>
    <string name="searchLabelOn">Searching for networks...</string>
    <string name="cancel">Cancel</string>
    <string name="join">Join</string>
    <string name="disconnected">Disconnected</string>
    <string name="connecting">Connecting...</string>
    <string name="connected">Connected</string>
    <string name="error">Error connecting!</string>
    <string name="syncLabel">Sync</string>
</resources>