<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocaleActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/localeConstraint1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_language"
            android:contentDescription="@string/languageIconImgDescr" />

        <TextView
            android:id="@+id/titleLocale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="32dp"
            android:text="@string/languageLabel"
            android:theme="@style/TextH2Style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/localeConstraint1">

        <Spinner
            android:id="@+id/localeSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/gradient_spinner"
            android:theme="@style/localeSpinnerStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginBottom="10dp"
            android:text="@string/localeHint"
            android:theme="@style/TextH3Style"
            app:layout_constraintBottom_toTopOf="@+id/localeSpinner"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toTopOf="@+id/localeSpinner"
            app:srcCompat="@drawable/line" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@+id/localeSpinner"
            app:srcCompat="@drawable/line" />


        <Button
            android:id="@+id/buttonSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="24dp"
            android:background="@null"
            android:text="@string/skip"
            android:theme="@style/ButtonCleanStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_selector"
            android:text="@string/next"
            android:theme="@style/ButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>