<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SyncRegister">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/syncConstraintTop"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_sync"
            android:contentDescription="@string/syncLabel" />

        <TextView
            android:id="@+id/titleLocale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="32dp"
            android:text="@string/syncLabel"
            android:theme="@style/TextH2Style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/syncConstraint"
        app:layout_constraintBottom_toTopOf="@id/syncConstraintBottom"
        app:layout_constraintTop_toBottomOf="@id/syncConstraintTop">

        <TextView
            android:id="@+id/searchLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/searchLabelOff"
            android:theme="@style/TextH4StyleBold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/connect"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/ic_reload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/searchLabel" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/searchLabelOff"
            android:theme="@style/TextH4StyleBold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchLabel" />




    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/syncConstraintBottom"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent" >


        <Button
            android:id="@+id/buttonNextN"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_selector"
            android:text="@string/next"
            android:theme="@style/ButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="closeAplication"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>