<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NetworkActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/networkConstraintTop"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_network"
            android:contentDescription="@string/networkLabel" />

        <TextView
            android:id="@+id/titleLocale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="32dp"
            android:text="@string/networkLabel"
            android:theme="@style/TextH2Style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/wifiConstraint"
        app:layout_constraintBottom_toTopOf="@id/searchConstraint"
        app:layout_constraintTop_toBottomOf="@id/networkConstraintTop">

        <TextView
            android:id="@+id/wifiLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/wifiLabel"
            android:theme="@style/TextH3Style"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/wifiSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:theme="@style/Switch"
            android:thumb="@drawable/switch_thumb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:track="@drawable/switch_track"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/searchConstraint"
        app:layout_constraintBottom_toTopOf="@id/networkConstraintBottom"
        app:layout_constraintTop_toBottomOf="@id/wifiConstraint">

        <TextView
            android:id="@+id/searchLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:visibility="invisible"
            android:text="@string/searchLabelOff"
            android:theme="@style/TextH4StyleBold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/reload"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="32dp"
            android:visibility="invisible"
            app:srcCompat="@drawable/ic_reload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/searchLabel" />

        <ScrollView
            android:id="@+id/networkScroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchLabel">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/wifiScrollTextParent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ListView
                    android:id="@+id/listWifi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:theme="@style/TextH3Style"
                    android:choiceMode="singleChoice"
                    android:listSelector="@color/button"
                    android:divider="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>




    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/networkConstraintBottom"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent" >


        <Button
            android:id="@+id/buttonNextN"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="24dp"
            android:visibility="invisible"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_selector"
            android:text="@string/next"
            android:theme="@style/ButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="goToSync"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>